kubernetes/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  labels:
    app: app-service
spec:
  type: NodePort
  selector:
    app: app-service
  ports:
    - port: 3001

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-service
  labels:
    app: app-service
spec:
  selector:
    matchLabels:
      app: app-service
  replicas: 1
  template:
    metadata:
      labels:
        app: app-service
    spec:
      containers:
        - name: app-service
          image: urosv/car-watcher-api:1.0.3
          ports:
            - containerPort: 3001
