kubernetes/collector-mongo.yaml
apiVersion: v1
kind: Service
metadata:
  name: collectordb
  labels:
    app: collectordb
spec:
  type: ClusterIP
  ports:
  - port: 27017
  selector:
    app: collectordb

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: collectordb
  labels:
    app: collectordb
spec:
  selector:
    matchLabels:
      app: collectordb
  replicas: 1
  template:
    metadata:
      labels:
        app: collectordb
    spec:
      containers:
        - name: collectordb
          image: mongo
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: collector-volume
              mountPath: /data/db
              subPath: data
      volumes:
        - name: collector-volume
          persistentVolumeClaim:
            claimName: collector-pv
