kubernetes/collector.yaml
apiVersion: v1
kind: Service
metadata:
  name: collector
spec:
  type: NodePort
  selector:
    app: collector
  ports:
  - port: 3000

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: collector
  labels:
    app: collector
spec:
  selector:
    matchLabels:
      app: collector
  replicas: 1
  template:
    metadata:
      labels:
        app: collector
    spec:
      containers:
      - name: collector
        image: urosv/car-watcher-collector:1.0.3
        ports:
        - containerPort: 3000
